<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robosub_messagers</name>
  <version>0.0.0</version>
  <description>Message composers/parsers for the robosub</description>
  <maintainer email="tmqCypher.git@gmail.com">Quinn Cypher</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>robosub_interfaces</depend>
  <depend>rfm9x_interfaces</depend>
  <depend>gps_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
